--- a/action.yml
+++ b/action.yml
@@ -2,8 +2,9 @@ name: Run Calkit
 description: >
   Run a Calkit project pipeline and optionally commit and push results to
   Git and DVC remotes.
-icon: arrow-right
-color: green
+branding:
+  icon: arrow-right
+  color: green
 inputs:
   save:
     description: Whether or not to save (commit and push) results.
