--- a/action.yml
+++ b/action.yml
@@ -38,7 +38,11 @@ runs:
       id: get-oidc-token
       shell: bash
       run: |
-        OIDC_TOKEN=$(curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=calkit.io" -s | jq -r '.value')
+        OIDC_TOKEN=$(curl -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=calkit.io" -s | jq -r '.value')
+        if [ -z "$OIDC_TOKEN" ] || [ "$OIDC_TOKEN" == "null" ]; then
+          echo "Failed to obtain OIDC token"
+          exit 1
+        fi
         echo "::add-mask::$OIDC_TOKEN"
         echo "oidc-token=$OIDC_TOKEN" >> $GITHUB_OUTPUT
     - name: Exchange OIDC token for Calkit DVC token
@@ -47,9 +51,12 @@ runs:
       shell: bash
       run: |
         CALKIT_DVC_TOKEN=$(curl -X POST https://api.calkit.io/login/github-oidc \
-          -H "Content-Type: application/json" \
-          -d '{"token":"${{ steps.get-oidc-token.outputs.oidc-token }}"}' \
-          -s | jq -r '.dvc_token')
+          -H "Authorization: Bearer ${{ steps.get-oidc-token.outputs.oidc-token }}" \
+          -s | jq -r '.access_token')
+        if [ -z "$CALKIT_DVC_TOKEN" ] || [ "$CALKIT_DVC_TOKEN" == "null" ]; then
+          echo "Failed to obtain Calkit DVC token"
+          exit 1
+        fi
         echo "::add-mask::$CALKIT_DVC_TOKEN"
         echo "dvc-token=$CALKIT_DVC_TOKEN" >> $GITHUB_OUTPUT
     - run: calkit config remote-auth
