--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -10,10 +10,11 @@ on:
 
 permissions:
   contents: write
-  pull-requests: write
 
 jobs:
   sync:
+    # Prevent infinite loops when the bot pushes README updates
+    if: ${{ github.actor != 'github-actions[bot]' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -23,13 +24,17 @@ jobs:
       - name: Run sync script
         run: |
           python3 scripts/update-readme.py
-      - name: Create PR if changed
-        if: ${{ github.ref_type == 'branch' }}
-        uses: peter-evans/create-pull-request@v6
-        with:
-          commit-message: "docs: sync README snippet from example.yml"
-          title: "docs: sync README snippet"
-          body: "Automated update of README code block from example.yml."
-          branch: docs/sync-readme-snippet
-          signoff: true
-          labels: documentation
+      - name: Commit and push changes (if any)
+        run: |
+          set -euo pipefail
+          if git diff --quiet -- README.md; then
+            echo "No changes to commit."
+            exit 0
+          fi
+
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+          git add README.md
+          git commit -m "Sync README snippet from example.yml"
+          git push
